feat:ログインのDocsを追加

--- a/docs/tutorial/login.mdx
+++ b/docs/tutorial/login.mdx
@@ -6,11 +6,11 @@ title: ログイン
 # ログイン
 
 ほとんどの機能はログインしなければ使えません。  
-今後問題を解くだけなら、ログインしなくてもできる機能を追加予定です。
-では、早速 AtCoder のアカウントを使ってログインしてみましょう
+今後問題を解くだけなら、ログインしなくてもできる機能を追加予定です。  
+では、早速AtCoderのアカウントを使ってログインしてみましょう。
 
-## 「ログインする」を押します
-
+## ログインダイアログを開く
+「ログインする」を押します。
 <img
   src={require("./assets/login/1.png").default}
   alt="login button"
@@ -20,10 +20,20 @@ title: ログイン
 
 ## ユーザー情報を入力します
 
-AtCoder のユーザー情報を入力します
+AtCoder のユーザー情報を入力し、ログインを押します。
 
 <img
   src={require("./assets/login/2.png").default}
   alt="user data"
   width="40%"
 />
+
+ユーザーIDがこのように表示されればログイン完了です。
+
+<img
+  src={require("./assets/login/3.png").default}
+  alt="user data"
+  width="40%"
+/>
+
+## アプリを使う準備ができました！！ 🎉
