format:prettier-plugin-md-nocjspを使用

--- a/docs/tutorial/snippet.mdx
+++ b/docs/tutorial/snippet.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 3
+sidebar_position: 10
 title: スニペット（カスタム補完機能）
 ---
 
@@ -10,7 +10,8 @@ title: スニペット（カスタム補完機能）
   <summary>今後の機能の追加</summary>
   今後 VSCode と全く同じ記法が使えるようにする予定です。
   <br />
-  また、簡単に設定できるようなツールも提供予定です<br/>
+  また、簡単に設定できるようなツールも提供予定です
+  <br />
   言語のエラー表示などにも対応予定です
 </details>
 
