--- a/docs/tutorial/login.mdx
+++ b/docs/tutorial/login.mdx
@@ -5,8 +5,11 @@ title: ログイン
 
 # ログイン
 
-ほとんどの機能はログインしなければ使えません。  
-今後問題を解くだけなら、ログインしなくてもできる機能を追加予定です。  
+:::tip
+現在ほとんどの機能はログインしなければ使えません。  
+今後問題を解くだけなら、ログインしなくてもできる機能を追加予定です。
+:::
+
 では、早速AtCoderのアカウントを使ってログインしてみましょう。
 
 ## ログインダイアログを開く
