fix:select-contest

--- a/docs/tutorial/select-contest.mdx
+++ b/docs/tutorial/select-contest.mdx
@@ -4,7 +4,9 @@ sidebar_position: 2
 
 # コンテストを選択
 
-設定されたコンテストは、ダッシュボードのデータ表示の対象になったり、Editorの問題選択タブに問題が追加されます。
+:::tip
+設定されたコンテストは、ダッシュボードのデータ表示の対象になったり、Editorの問題選択タブに問題が追加されたりします。
+:::
 
 ## 設定ダイアログを開く　
 
