--- a/docs/tutorial/task.mdx
+++ b/docs/tutorial/task.mdx
@@ -13,19 +13,23 @@ Editor機能を使って、問題を解いてみましょう。
 
 右のバーから、Editorに切り替えます。
 
-<img
-  src={require("./assets/task/1.png").default}
-  alt="login button"
-  width="30%"
-/>
+<Zoom>
+  <img
+    src={require("./assets/task/1.png").default}
+    alt="login button"
+    width="500"
+  />
+</Zoom>
 
 問題選択タブから選択するまたは、AtCoderの問題タブから問題URLを選択します。
 
-<img
-  src={require("./assets/task/2.png").default}
-  alt="login button"
-  width="50%"
-/>
+<Zoom>
+  <img
+    src={require("./assets/task/2.png").default}
+    alt="login button"
+    width="500"
+  />
+</Zoom>
 
 すると自動で問題が開かれ、Editorがセットされます。
 
@@ -41,8 +45,10 @@ Editor機能を使って、問題を解いてみましょう。
 
 ウィンドウの右下のボタンから、設定ダイアログを開きます
 
-<img
-  src={require("./assets/task/4.png").default}
-  alt="login button"
-  width="50%"
-/>
+<Zoom>
+  <img
+    src={require("./assets/task/4.png").default}
+    alt="login button"
+    width="500"
+  />
+</Zoom>
