--- a/docs/tutorial/local-judge.mdx
+++ b/docs/tutorial/local-judge.mdx
@@ -11,7 +11,7 @@ import "react-medium-image-zoom/dist/styles.css";
 :::caution
 
 この機能は、現在開発中です。利用する際は、最新の注意を払ってください。
-また現在C++のみ対応しています。
+また現在C++とPython3に対応しています。
 
 :::
 
