--- a/docs/tutorial/task.mdx
+++ b/docs/tutorial/task.mdx
@@ -41,13 +41,95 @@ Editor機能を使って、問題を解いてみましょう。
   />
 </Zoom>
 
-## Editorの言語を提出する
+## Editorの言語を変更する
 
 ウィンドウの右下のボタンから、設定ダイアログを開きます
 
 <Zoom>
   <img
     src={require("./assets/task/4.png").default}
+    alt="login button"
+    width="500"
+  />
+</Zoom>
+
+現在C++とPythonにだけ対応しています。
+
+## コードを書く
+
+エディターにコードを書いていきます。
+
+<Zoom>
+  <img
+    src={require("./assets/task/5.png").default}
+    alt="login button"
+    width="500"
+  />
+</Zoom>
+
+## コードをテストする
+
+問題ビューに表示されている「コードテストで実行」を押すか、コードテストツールを使って、サンプルケースを実行することができます。
+:::caution
+コードテスト機能は、現在不具合が多く、うまく実行されない場合があります。  
+もし、不具合を再現できる方法を発見したら、Discordコミュニティーで報告してください！
+:::
+
+#### サンプルケースの上のボタン
+
+<Zoom>
+  <img
+    src={require("./assets/task/6.png").default}
+    alt="login button"
+    width="500"
+  />
+</Zoom>
+
+#### コードテストツール
+
+<details>
+  <summary>コードテストツールの開き方</summary>
+  ここから開けます
+  <br />
+  <Zoom>
+    <img
+      src={require("./assets/task/7.png").default}
+      alt="login button"
+      width="500"
+    />
+  </Zoom>
+</details>
+<Zoom>
+  <img
+    src={require("./assets/task/8.png").default}
+    alt="login button"
+    width="500"
+  />
+</Zoom>
+
+## 提出する
+
+**書いたコードを提出します。**  
+上のTaskBarからも実行できます
+
+:::tip
+control or command + shift + S → Enter  
+でキーボードだけで提出できます
+:::
+
+<Zoom>
+  <img
+    src={require("./assets/task/9.png").default}
+    alt="login button"
+    width="500"
+  />
+</Zoom>{" "}
+
+結果は、**通知**または**提出一覧**で確認できます。
+
+<Zoom>
+  <img
+    src={require("./assets/task/10.png").default}
     alt="login button"
     width="500"
   />
