update:footer Link

--- a/docs/bata.mdx
+++ b/docs/bata.mdx
@@ -7,7 +7,7 @@ title: Bata テストについて
 Bata テストに参加する場合は、注意を読んだ上 Discord コミュニティに参加してください
 
 :::caution
-特にコンテスト開始直後の動作が不安定なので気をつけてください。Bata版では、Unratedでの参加をお勧めします。
+特にコンテスト開始直後の動作が不安定なので気をつけてください。現段階のBata版では、Unratedでの参加をお勧めします。
 :::
 
 ### **注意**
