--- a/docs/tutorial/local-judge.mdx
+++ b/docs/tutorial/local-judge.mdx
@@ -11,7 +11,8 @@ import "react-medium-image-zoom/dist/styles.css";
 :::caution
 
 この機能は、現在開発中です。利用する際は、最新の注意を払ってください。
-また現在C++とPython3に対応しています。
+また現在C++とPython3に対応しています。　　
+現在、実行時間、メモリは仮の値を表示させていて、正しく表示されていません
 
 :::
 
